testsuite/tests/typing-recmod/t01bad.compilers.reference
File "t01bad.ml", line 10, characters 15-35:
Error: The type abbreviation A.t is cyclic
